# agentara

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  README.md  REQUIREMENTS.md  pyproject.toml
agentara/: __init__.py  exceptions.py  loader.py  parser.py  registry.py  validator.py
agentara/grammar/: __init__.py  agent.lark  agent.tx
docs/: agent_dsl_prompt_for_ai.md  usage.md
examples/: advanced_agent.dsl  multi_agent_system.dsl  simple_agent.dsl  workflow_example.dsl
knowledge/: internal_vs_external_dsl_explained.md  jsx_and_react_parsing.md  markup_language_parsers_guide.md  parser_and_grammar_explained.md  parser_tools_comparison.md  textx_parsing_output_explained.md  textx_unique_advantages_and_limitations.md
research/: dsl_to_ui_form_solution.md  frontend_rendering_alternatives.md  lark_core_philosophy_investigation.md  textX_research_report.md  textx_for_html_syntax_feasibility.md  textx_markdown_to_html_feasibility.md  textx_serialization_research_report.md  textx_vs_jsonschema_comparison.md
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_runner.py
tests/e2e/io/: agent_with_capabilities.json  complete_agent.json  complex_agent_full_features.json  empty_model.json  invalid_syntax_error.json  missing_closing_brace.json  multiple_agents.json  rate_limit_rule.json  simple_agent_success.json  syntax_error.json  validation_error_no_name.json  workflow_definition.json
tests/unit/: __init__.py  test_integration.py  test_loader.py  test_parser.py  test_registry.py  test_validator.py
