[project]
name = "agentara"
version = "0.0.0"
description = "AI Agent generation framework based on textX DSL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "textX>=3.0.0",]
[[project.authors]]
name = "Agentara Team"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [ "pytest>=7.0.0", "pytest-cov>=4.0.0", "pyright>=1.1.0", "ruff>=0.1.0", "pre-commit>=3.5.0",]

[project.license]
text = "MIT"

# No CLI scripts - this is a library

[project.urls]
Homepage = "https://github.com/agentara/agentara"
Repository = "https://github.com/agentara/agentara.git"
Issues = "https://github.com/agentara/agentara/issues"
Documentation = "https://github.com/agentara/agentara#readme"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingParameterType = false
reportAttributeAccessIssue = false

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "B", "UP", "RUF",]
ignore = [ "E501", "RUF001", "RUF002", "RUF003",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build]
include = [ "agentara/**/*.py", "agentara/py.typed", "agentara/grammar/**/*.tx",]
